--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -55,6 +55,23 @@
 }
 
 /* Responsive: Mobiel */
+/* Tablet */
+@media (min-width: 768px) and (max-width: 1023px) {
+    .content-left {
+        height: 40vh;
+    }
+
+    .header-content {
+        flex-direction: row;
+    }
+
+    .header-image{
+        margin: 0 0 50px 0;
+    }
+}
+
+
+
 @media (max-width: 768px) {
     .header-content {
         flex-direction: column;
