--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -24,7 +24,6 @@
     max-width: 600px;
     width: 100%;
     overflow: hidden;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.05);
     text-decoration: none;
     color: #0A192F;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -32,20 +31,19 @@
 
 .portfolio-card:hover {
     transform: translateY(-5px);
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 10px 25px rgb(136, 232, 244);
 }
 
 .portfolio-image {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin: 2rem;
 }
 
 .portfolio-image img {
     width: 500px;
-    height: 300px;
+    height: 200px;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -63,7 +61,6 @@
 
 .portfolio-content h3 {
     font-size: 1.5rem;
-    margin-bottom: 0.5rem;
     color: var(--color-bg);
 }
 
@@ -74,6 +71,13 @@
 }
 
 /* Responsive */
+
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .portfolio-grid {
+        grid-template-columns: 1fr ;
+    }
+}
 @media (max-width: 768px) {
     .portfolio-section {
         padding: 4rem 2rem;
