--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -101,3 +101,14 @@
         font-size: 0.95rem;
     }
 }
+
+@media (max-width: 480px) {
+
+    .portfolio-image img {
+        width: 400px;
+        height: 120px;
+        border-radius: 10px;
+        margin: 0 20px;
+    }
+
+}
