--- a/src/pages/Diensten/Diensten.css
+++ b/src/pages/Diensten/Diensten.css
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     gap: 4rem;
-    padding: 2rem;
+    padding: 3rem;
 }
 
 /* Per dienst sectie */
@@ -50,6 +50,7 @@
     margin-left: 2rem;
 }
 
+
 /* Diensten icon & tekst */
 .dienst-icon {
     font-size: 4rem;
@@ -67,6 +68,17 @@
     font-size: 1rem;
     line-height: 1.6;
     color: #333333;
+    margin-bottom: 1.5rem;
+}
+
+.dienst-content a {
+    text-decoration: none;
+    background-color: var(--color-bg);
+    padding: 1rem 1rem;
+    border-radius: 10px;
+    color: var(--color-text);
+    font-family: var(--font-title), sans-serif;
+
 }
 
 /* Responsive styling */
