--- a/src/pages/Offerte Aanvragen/OfferteAanvragen.css
+++ b/src/pages/Offerte Aanvragen/OfferteAanvragen.css
@@ -3,6 +3,7 @@
     background-color: var(--color-bg);
     padding: 6rem 1.5rem;
     color: var(--color-text);
+    height: 80vh;
 }
 
 #offerte h2 {
@@ -101,6 +102,21 @@
 
     #offerte button {
         padding: 0.65rem 1.2rem;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 1100px) {
+    #offerte {
+        padding: 4rem 1rem;
+        height: 80vh;
+    }
+
+}
+
+
+@media (max-width: 799px) {
+    #offerte {
+        height: 80vh;
     }
 }
 
