--- a/src/pages/Offerte Aanvragen/OfferteAanvragen.css
+++ b/src/pages/Offerte Aanvragen/OfferteAanvragen.css
@@ -108,7 +108,7 @@
 @media (min-width: 800px) and (max-width: 1100px) {
     #offerte {
         padding: 4rem 1rem;
-        height: 80vh;
+        height: auto;
     }
 
 }
@@ -116,13 +116,17 @@
 
 @media (max-width: 799px) {
     #offerte {
-        height: 80vh;
+        height: auto;
     }
 }
 
 @media (max-width: 480px) {
     #offerte h2 {
         font-size: 1.8rem;
+    }
+
+    #offerte {
+        height: auto;
     }
 
     #offerte p {
