--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -2,7 +2,7 @@
     padding: 6rem 2rem;
     background-color: var(--color-bg );
     text-align: center;
-    height: 70vh;
+    height: auto;
 }
 
 .contact-container {
@@ -55,7 +55,7 @@
 
 .contact-btn {
     background-color: #64FFDA;
-    color: #0A192F;
+    color: #000000;
     padding: 1rem 2rem;
     font-weight: 600;
     border-radius: 12px;
