--- a/src/pages/Offerte Aanvragen/OfferteAanvragen.css
+++ b/src/pages/Offerte Aanvragen/OfferteAanvragen.css
@@ -29,6 +29,7 @@
     gap: 1rem;
     align-items: center;
     margin: 5rem 10rem;
+    height: 80vh;
 }
 
 /* =========================
@@ -182,7 +183,8 @@
 @media (max-width: 900px) {
     .offerte-layout {
         grid-template-columns: 1fr;
-        margin: 5rem 2rem
+        margin: 5rem 2rem;
+        height: auto;
 
     }
 
