--- a/src/pages/ProjectPage/ProjectPage.css
+++ b/src/pages/ProjectPage/ProjectPage.css
@@ -58,7 +58,7 @@
     box-shadow: 6px 9px 20px 0 #646464;
     width: 200px;
     height: 3rem;
-
+    border-radius: 0 0 1rem 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
