--- a/src/components/Navigate/Navigate.css
+++ b/src/components/Navigate/Navigate.css
@@ -8,7 +8,7 @@
     align-items: center;
     padding: 0 2rem;
     height: 80px;
-    margin: 10px 20px;
+    margin: 0 20px;
     border-radius: 20px;
     position: relative;
     z-index: 3;
