--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -33,7 +33,7 @@
 .portfolio-grid {
     display: flex;
     flex-direction: column;
-    gap: 6rem;
+    gap: 5rem;
 }
 
 
@@ -47,8 +47,8 @@
 
 .portfolio-card-link {
     display: grid;
-    grid-template-columns: 1.3fr 1fr;
-    gap: 4rem;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
     align-items: center;
     text-decoration: none;
     color: inherit;
@@ -66,7 +66,7 @@
 }
 
 .portfolio-image img {
-    width: 100%;
+    width: 400px;
     height: 100%;
     object-fit: fill;
     display: block;
@@ -80,11 +80,6 @@
 .portfolio-image-overlay {
     position: absolute;
     inset: 0;
-    background: linear-gradient(
-            to bottom,
-            rgba(10, 25, 47, 0.05),
-            rgba(10, 25, 47, 0.65)
-    );
     display: flex;
     align-items: flex-end;
     padding: 1.5rem;
